--- a/Kursach.adoc
+++ b/Kursach.adoc
@@ -24,16 +24,12 @@ image::image-1.png[]
 |====
 
 |PIN |Описание
-
 |VCC
 |3,3 В/5 В
-
 |GND
 |Земля
-
 |SDA
 |Ввод данных I2C
-
 |SCL
 |Тактовый контакт I2C
 |====
@@ -99,7 +95,12 @@ image::image-2022-03-03-22-29-23-562.png[]
 * Данные[2..0] и Данные[8..15] – 0.
 
 === Анализ программы
-По протоколу SMBus и его таймингу мы можем это знать. Мастер пошлет стартовый сигнал в начале. Затем отправьте 8-битные данные, которые объединяются с 7-битным адресом ведомого устройства и битом операции чтения/записи. Если имеется только один датчик MLX90614, 7-битный адрес по умолчанию равен 0x00. Если на шине более одного MLX90614, мы можем изменить адрес Slave в EEPROM. С сигналом Start, если мы хотим прочитать MLX90614, нам нужно отправить (SA<<1) + 0 = 0x00 далее. Если мы хотим записать, нам нужно отправить (SA<<1) + 1 = 0x01 дальше. Согласнок приведенной выше форме адреса регистра ОЗУ, адрес регистра температуры окружающей среды — 0x06, а адрес регистра температуры объекта — 0x07 в ОЗУ. С помощью формы команды мы можем узнать код операции доступа к ОЗУ 0x00 и 0x20 доступа к EEPROM. Как правило, мы считываем значение температуры из ОЗУ, нам не нужно читать EEPROM. Чтобы получить доступ к регистру температуры окружающей среды в ОЗУ, введите команду: 0x00 | 0x06 = 0x06. И используйте команду: 0x00 | 0x07 = 0x07 для доступа к регистру температуры объекта. Используя код STM32F в качестве примеров, драйвер использует PB8 и PB9 для имитации синхронизации SMBus. Код драйвера находится в файле SMBus.c. Мы считываем данные о температуре окружающей среды и объекта в соответствии с приведенным выше временем, затем вычисляем температуру окружающей среды и температуру объекта в соответствии с таблицей данных.
+Мастер пошлет стартовый сигнал в начале. Затем отправит 8-битные данные, которые объединяются с 7-битным адресом ведомого устройства и битом операции чтения/записи. Если имеется только один датчик MLX90614, 7-битный адрес по умолчанию равен 0x00. Если на шине более одного MLX90614, мы можем изменить адрес Slave в EEPROM. С сигналом Start, если мы хотим прочитать MLX90614, нам нужно отправить (SA<<1) + 0 = 0x00 далее. Если мы хотим записать, нам нужно отправить (SA<<1) + 1 = 0x01 дальше.
+
+Согласно форме адреса регистра ОЗУ, адрес регистра температуры окружающей среды — 0x06, а адрес регистра температуры объекта — 0x07 в ОЗУ. С помощью формы команды мы можем узнать код операции доступа к ОЗУ 0x00 и 0x20 доступа к EEPROM. Как правило, мы считываем значение температуры из ОЗУ, нам не нужно читать EEPROM.
+
+Чтобы получить доступ к регистру температуры окружающей среды в ОЗУ, введем команду: 0x00 | 0x06 = 0x06. И используем команду: 0x00 | 0x07 = 0x07 для доступа к регистру температуры объекта.Драйвер использует PB8 и PB9 для имитации синхронизации SMBus. Код драйвера находится в файле SMBus.c. Мы считываем данные о температуре окружающей среды и объекта в соответствии с приведенным выше временем, затем вычисляем температуру окружающей среды и температуру объекта в соответствии с таблицей данных.
+
 Градус Цельсия（°C）： ((TempData_H <<8) + TempData_L )*0,02 – 273,15
 
 === Принцип измерения
@@ -177,7 +178,17 @@ Free RTOS – бесплатная многозадачная операцион
 
 == Фильтр
 
-К измеренной температуре должен быть применен цифровой фильтр вида:
+Входной сигнал необходимо будет отфильтровать с помощью фильтра с бесконечно-импульсной характеристикой БИХ. На рисунке ниже представлены требования к нему.
 
 image::image-2022-03-03-22-37-12-039.png[]
+
+Время дискретизации фильтра совпадает с временем получения новых значений сигнала.
+
+== Питание
+
+Питание будет осуществляться с помощью солнечной батареи, поскольку питание будет нестабильно, необходимо будет уменьшить частоту процессора.
+
+== Архитектура программы (примерно)
+
+image::image-2022-03-06-16-19-43-788.png[]
 
