--- a/Kursach.adoc
+++ b/Kursach.adoc
@@ -186,7 +186,7 @@ image::image-2022-03-03-22-37-12-039.png[]
 
 == Питание
 
-Питание будет осуществляться с помощью солнечной батареи, поскольку питание будет нестабильно, необходимо будет уменьшить частоту процессора.
+Питание будет осуществляться с помощью солнечной батареи, поскольку питание будет нестабильно, необходимо будет уменьшить частоту процессора. Было выбрано питание от солнечной батареи, используя Solar Power Manager . Он может подавать напряжение от 6 В до 24 В.
 
 == Архитектура программы (примерно)
 
